--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs": "jsdoc -c jsdoc.json"
-
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "@bull-board/api": "^5.21.4",
     "@bull-board/express": "^5.21.4",
     "bullmq": "^5.12.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1"
   },
