--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "scheduler",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "start": "node --env-file=.env ./src/app.js"
   },
   "author": "",
   "license": "ISC",
