--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: redis:latest
     container_name: redis
     ports:
-      - "6379:6379"
+      - "6378:6379"
     networks:
       - app-network      
 
@@ -20,6 +20,8 @@ services:
       - REDIS_PORT=6379
     networks:
       - app-network
+    dns:
+      - 8.8.8.8
 
 networks:
   app-network:
