--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@bull-board/api": "^5.21.4",
     "@bull-board/express": "^5.21.4",
+    "axios": "^1.7.7",
     "bullmq": "^5.12.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
