--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bullmq": "^5.12.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "pino-http": "^10.3.0"
   },
   "devDependencies": {
     "jsdoc": "^4.0.3"
